--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "(cd hello_world_bot && npm start)"
   },
   "repository": {
     "type": "git",
