--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "bots",
+  "name": "hello_world_bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "hello_world_bot.js",
   "scripts": {
-    "start": "(cd hello_world_bot && npm start)"
+    "start": "nodemon --inspect hello_world_bot.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/peterramaldes/bots.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/peterramaldes/bots/issues"
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   },
-  "homepage": "https://github.com/peterramaldes/bots#readme"
+  "dependencies": {
+    "@discordjs/opus": "^0.4.0",
+    "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0",
+    "ffmpeg-static": "^4.2.7",
+    "ytdl-core": "^4.4.5"
+  }
 }
