--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "hello_world_bot",
+  "name": "bot_viadao",
   "version": "1.0.0",
   "description": "",
-  "main": "hello_world_bot.js",
+  "main": "index.js",
   "scripts": {
     "start": "nodemon --inspect hello_world_bot.js"
   },
-  "author": "",
+  "author": "Peter Admilson Ramaldes",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  },
   "dependencies": {
+    "nodemon": "^2.0.7",
     "@discordjs/opus": "^0.4.0",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
