--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --inspect hello_world_bot.js"
+    "start": "node index.js",
+    "start:dev": "nodemon --inspect index.js"
   },
   "author": "Peter Admilson Ramaldes",
   "license": "ISC",
+	"devDependencies": {
+    "nodemon": "^2.0.7"
+	},
   "dependencies": {
-    "nodemon": "^2.0.7",
     "@discordjs/opus": "^0.4.0",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
