--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "worker": "node index.js",
     "start": "node index.js",
     "start:dev": "nodemon --inspect index.js"
   },
